# gstreamer-opencv-wheel-builder

./: CMakeLists.txt  Makefile  pyproject.toml
.github/workflows/: build-wheels.yaml  build_wheels.yaml
