# This file replaces (or patches) the pyproject.toml inside a cloned opencv-python repo.
#
# Setup:
#   git clone --recursive https://github.com/opencv/opencv-python.git
#   cd opencv-python
#   cp /path/to/this/pyproject.toml .        # overwrites the existing one
#   pip install cibuildwheel
#   cibuildwheel --only cp312-manylinux_x86_64
#
# Output wheels land in ./wheelhouse/
# Install: pip install wheelhouse/opencv_python-*.whl

[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "pip",
    "scikit-build",
    "cmake",
    "ninja",
    "numpy",
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
# CPython only, x86_64 only, skip musl (no GStreamer packages)
build = "cp312-*"
archs = ["x86_64"]
skip  = ["*-musllinux*"]

# manylinux_2_28 = AlmaLinux 8 base, dnf, glibc >= 2.28
# Compatible with: Ubuntu 20.04+, Debian 11+, RHEL/Rocky/Alma 8+, Fedora 29+
manylinux-x86_64-image = "manylinux_2_28"

# Install GStreamer and OpenCV system deps once before all wheels
before-all = """
    dnf install -y epel-release && \
    dnf install -y \
        cmake gcc gcc-c++ \
        gtk2-devel gtk3-devel \
        gstreamer1-devel \
        gstreamer1-plugins-base-devel \
        gstreamer1-plugins-base \
        gstreamer1-plugins-good \
        gstreamer1-plugins-bad-free \
        python3-devel \
        mesa-libGL-devel \
        libpng-devel libjpeg-devel libtiff-devel \
        openblas-devel lapack-devel && \
    dnf clean all
"""

before-build = "pip install scikit-build numpy"

# Smoke-test: verify GStreamer was compiled in
test-command = """
python -c "
import cv2, sys
lines = [l for l in cv2.getBuildInformation().split('\\n') if 'GStreamer' in l]
ok = bool(lines and ('YES' in lines[0].upper() or '1' in lines[0]))
print(lines[0].strip() if lines else 'GStreamer info not found')
sys.exit(0 if ok else 1)
"
"""

# CMAKE_ARGS is picked up by opencv-python's setup.py automatically.
# Mirrors the Makefile's install-headed target.
# For headless: remove WITH_GTK and set ENABLE_HEADLESS=1 instead.
[tool.cibuildwheel.environment]
CMAKE_ARGS = "-DWITH_GSTREAMER=ON -DWITH_GTK=ON"
ENABLE_HEADLESS = "0"