# This file replaces the pyproject.toml inside a cloned opencv-python repo.
#
# Local build (requires Ubuntu 22.04+ or 24.04 with GStreamer dev packages):
#   git clone --recursive --depth 1 https://github.com/opencv/opencv-python.git
#   cd opencv-python
#   cp /path/to/this/pyproject.toml .
#   pip install scikit-build numpy wheel
#   CMAKE_ARGS="-DWITH_GSTREAMER=ON -DWITH_GTK=ON" pip wheel . --no-deps -w ../wheelhouse
#
# In CI the build-wheels.yaml workflow handles everything inside an Ubuntu 24.04 container.
#
# Output wheels land in ./wheelhouse/
# Install: pip install wheelhouse/opencv_python-*.whl
#
# Versions pinned:
#   GStreamer from Ubuntu 24.04 apt  →  1.24.x  (matches Makefile host)

[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "pip",
    "scikit-build",
    "cmake",
    "ninja",
    "numpy",
]
build-backend = "setuptools.build_meta"